crates/es-fluent-derive/tests/ui_namespace/namespace_not_allowed.rs
use es_fluent_derive::EsFluent;

#[derive(EsFluent)]
#[fluent(namespace = "blocked")]
pub enum NamespaceBlocked {
    A,
}

fn main() {}
